# LatticeCtc

./: README.md
cpp/: .gitignore  CMakeLists.txt
cpp/kernels/: backward_algo.cpp  backward_algo.cu  backward_algo.h  ctc_loss.cpp  ctc_loss.cu  ctc_loss.h  forward_algo.cpp  forward_algo.cu  forward_algo.h  hmm_combined.cpp  hmm_shared.h  lattice.cpp  lattice.h  viterbi_algo.cpp  viterbi_algo.cu  viterbi_algo.h
cpp/kernels_for_testing/: add_one.cpp  add_one.cu  jagged_edit.cpp  jagged_edit.cu  jagged_edit.h  mul_by_two.cpp  mul_by_two.cu  mul_by_two.h  pass_array.cpp  pass_array.cu  pass_array.h  zero_out.cpp
cpp/utils/: array_infos.h  context_helpers.cpp  context_helpers.cu  context_helpers.h  core_types.h  cuda_includes_for_ide.h  cuda_includes_minimal.h  decl_cpu_only.h  decl_gpu_only.h  error_handling_cpu.cpp  error_handling_cpu.h  math_utils.h  tensor_helpers.cpp  tensor_helpers.cu  tensor_helpers.h  timer.h
python/: base.py  ctc_loss.py
